# VIMP-P2P

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  P2P-PLAN-DETAILS.md  P2P-PLAN-SAFITY.md  P2P-PLAN.md  PLAN.md  PLAN_4_details.md  README.md  eslint.config.js  package-lock.json  package.json  plan-md-humble-micali.md  vite.config.js  vitest.config.js
.github/deployment/: add-server.sh  install-system.sh
.github/workflows/: deploy.yml  (+1 more)
core/: Cargo.toml
core/src/: bomb.rs  config.rs  events.rs  game.rs  lib.rs  map.rs  motion.rs  physics.rs  rng.rs  sim.rs  snapshot.rs  tank.rs  tanks.rs
core/src/bots/: controller.rs  mod.rs  navigation.rs  pathfinder.rs
core/src/client/: interpolator.rs  mod.rs  predictor.rs  raycast.rs  shot.rs  unpack.rs
core/tests/: sim.rs
docs/: README.md  architecture.md  client.md  configuration.md  core.md  deployment.md  extending.md  gameplay.md  getting-started.md  host.md  master.md  network.md  server.md
games/tanks/core/: Cargo.toml
games/tanks/core/src/: body_tag.rs  bomb.rs  config.rs  lib.rs  motion.rs  tank.rs  tanks.rs
games/tanks/core/src/bots/: controller.rs
games/tanks/core/src/client/: mod.rs  predictor.rs  shot.rs
games/tanks/core/tests/: sim.rs
plan/: README.md  auth_b1.md  auth_b2.md  auth_b3.md  auth_b4.md  auth_b5.md  auth_b6.md  auth_fixes.md  split_a1.md  split_a2.md  split_a3.md  split_a4.md  split_a5.md  stage_d1.md  stage_d2.md  stage_d3.md  stage_d4.md  stage_d5.md  stage_d6.md  stage_d7.md
scripts/: build-game-manifest.js  copy-game-sounds.js  export-maps.js  process-audio.js
(+197 files in other folders)
