[workspace]
resolver = "2"
members = ["packages/engine/core"]

[workspace.dependencies]
indexmap = { version = "2.14.0", features = ["serde"] }
rapier2d = { version = "0.34.0", features = ["enhanced-determinism", "serde-serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.release]
opt-level = 3
lto = true
