[package]
name = "vimp_core"
version = "0.1.0"
edition = "2024"
description = "VIMP Tank Battle — единое ядро симуляции (физика, танки, оружие, боты, снапшоты)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = { version = "2.14.0", features = ["serde"] }
rapier2d = { version = "0.34.0", features = ["enhanced-determinism", "serde-serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wasm-bindgen = "0.2.126"

[profile.release]
opt-level = 3
lto = true
